--- a/xygine/CMakeLists.txt
+++ b/xygine/CMakeLists.txt
@@ -5,22 +5,31 @@ if(NOT CMAKE_BUILD_TYPE)
   SET(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build (Debug or Release)" FORCE)
 endif()
 
+if(NOT XY_STATIC_LIB)
+  SET(XY_STATIC_LIB True CACHE BOOL "Should xygine be built as a static or shared lib" FORCE)
+endif()
+
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
-SET(xygine_STATIC_SFML FALSE CACHE BOOL "Choose whether SFML is linked statically or not.")
-SET(xygine_STATIC_RUNTIME FALSE CACHE BOOL "Use statically linked standard/runtime libraries? This option must match the one used for SFML.")
+SET(XY_STATIC_SFML FALSE CACHE BOOL "Choose whether SFML is linked statically or not.")
+SET(XY_STATIC_RUNTIME FALSE CACHE BOOL "Use statically linked standard/runtime libraries? This option must match the one used for SFML.")
 
 if(CMAKE_COMPILER_IS_GNUCXX)
-  if(xygine_STATIC_RUNTIME)
+  if(XY_STATIC_RUNTIME)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++1y -static")
   else()
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++1y")
   endif()
 endif()
 
-SET (CMAKE_CXX_FLAGS_DEBUG "-g -D_DEBUG_")
-SET (CMAKE_CXX_FLAGS_RELEASE "-O4 -DNDEBUG")
+if(XY_STATIC_LIB)
+  SET (CMAKE_CXX_FLAGS_DEBUG "-g -D_DEBUG_ -DXY_STATIC")
+  SET (CMAKE_CXX_FLAGS_RELEASE "-O4 -DNDEBUG -DXY_STATIC")
+else()
+  SET (CMAKE_CXX_FLAGS_DEBUG "-g -D_DEBUG_")
+  SET (CMAKE_CXX_FLAGS_RELEASE "-O4 -DNDEBUG")
+endif()
 
-if(xygine_STATIC_SFML)
+if(XY_STATIC_SFML)
   SET(SFML_STATIC_LIBRARIES TRUE)
 endif()
 
@@ -51,9 +60,17 @@ include("src/CMakeLists.txt")
 
   
 if(WIN32)
-  add_library(xygine STATIC WIN32 ${xygine_SRC})
+  if(XY_STATIC_LIB)
+    add_library(xygine STATIC WIN32 ${xygine_SRC})
+  else()
+    add_library(xygine SHARED WIN32 ${xygine_SRC})
+  endif()   
 else()
-  add_library(xygine STATIC ${xygine_SRC})
+  if(XY_STATIC_LIB)
+    add_library(xygine STATIC ${xygine_SRC})
+  else()
+    add_library(xygine SHARED ${xygine_SRC})
+  endif()
 endif()
 
 target_link_libraries(xygine
