update cmake file

--- a/xygine/CMakeLists.txt
+++ b/xygine/CMakeLists.txt
@@ -6,7 +6,7 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 if(NOT XY_STATIC_LIB)
-  SET(XY_STATIC_LIB True CACHE BOOL "Should xygine be built as a static or shared lib" FORCE)
+  SET(XY_STATIC_LIB True CACHE BOOL "Should xygine be built as a static or shared lib")
 endif()
 
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
@@ -17,16 +17,19 @@ if(CMAKE_COMPILER_IS_GNUCXX)
   if(XY_STATIC_RUNTIME)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++1y -static")
   else()
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++1y")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++1y -fPIC")
   endif()
 endif()
 
 if(XY_STATIC_LIB)
-  SET (CMAKE_CXX_FLAGS_DEBUG "-g -D_DEBUG_ -DXY_STATIC")
-  SET (CMAKE_CXX_FLAGS_RELEASE "-O4 -DNDEBUG -DXY_STATIC")
+  SET(CMAKE_CXX_FLAGS_DEBUG "-g -D_DEBUG_ -DXY_STATIC")
+  SET(CMAKE_CXX_FLAGS_RELEASE "-O4 -DNDEBUG -DXY_STATIC")
+  SET(CMAKE_DEBUG_POSTFIX -s-d)
+  SET(CMAKE_RELEASE_POSTFIX -s)
 else()
-  SET (CMAKE_CXX_FLAGS_DEBUG "-g -D_DEBUG_")
-  SET (CMAKE_CXX_FLAGS_RELEASE "-O4 -DNDEBUG")
+  SET(CMAKE_CXX_FLAGS_DEBUG "-g -D_DEBUG_")
+  SET(CMAKE_CXX_FLAGS_RELEASE "-O4 -DNDEBUG")
+  SET(CMAKE_DEBUG_POSTFIX -d)
 endif()
 
 if(XY_STATIC_SFML)
