--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -1,71 +1,71 @@
-set(xygine_SRC
-  ${xygine_DIR}/App.cpp
-  ${xygine_DIR}/AudioManager.cpp
-  ${xygine_DIR}/CommandQueue.cpp 
-  ${xygine_DIR}/Entity.cpp
-  ${xygine_DIR}/FileSystem.cpp
-  ${xygine_DIR}/FontResource.cpp
-  ${xygine_DIR}/MessageBus.cpp
-  ${xygine_DIR}/Music.cpp
-  ${xygine_DIR}/ParticleAffectors.cpp
-  ${xygine_DIR}/PolyBatch.cpp
-  ${xygine_DIR}/PostBloom.cpp
-  ${xygine_DIR}/PostChromeAb.cpp
-  ${xygine_DIR}/PostProcess.cpp
-  ${xygine_DIR}/QuadTree.cpp
-  ${xygine_DIR}/QuadTreeNode.cpp
-  ${xygine_DIR}/Reports.cpp
-  ${xygine_DIR}/Scene.cpp
-  ${xygine_DIR}/Score.cpp
-  ${xygine_DIR}/Server.cpp
-  ${xygine_DIR}/ShaderResource.cpp
-  ${xygine_DIR}/SoundPlayer.cpp
-  ${xygine_DIR}/State.cpp
-  ${xygine_DIR}/StateStack.cpp
-  ${xygine_DIR}/components/Component.cpp
-  ${xygine_DIR}/components/ComponentAnimatedDrawable.cpp
-  ${xygine_DIR}/components/ComponentAnimationController.cpp 
-  ${xygine_DIR}/components/ComponentAudioListener.cpp
-  ${xygine_DIR}/components/ComponentAudioSource.cpp
-  ${xygine_DIR}/components/ComponentCamera.cpp
-  ${xygine_DIR}/components/ComponentParticleController.cpp
-  ${xygine_DIR}/components/ComponentParticleSystem.cpp  
-  ${xygine_DIR}/components/ComponentPointLight.cpp  
-  ${xygine_DIR}/components/QuadTreeComponent.cpp  
-  ${xygine_DIR}/parsers/pugixml.cpp  
-  ${xygine_DIR}/physics/PhysicsAffectorAreaForce.cpp
-  ${xygine_DIR}/physics/PhysicsAffectorConstantForce.cpp
-  ${xygine_DIR}/physics/PhysicsAffectorPointForce.cpp
-  ${xygine_DIR}/physics/PhysicsCollisionShape.cpp
-  ${xygine_DIR}/physics/PhysicsCollisionCircleShape.cpp
-  ${xygine_DIR}/physics/PhysicsCollisionEdgeShape.cpp
-  ${xygine_DIR}/physics/PhysicsCollisionPolygonShape.cpp
-  ${xygine_DIR}/physics/PhysicsCollisionRectangleShape.cpp
-  ${xygine_DIR}/physics/PhysicsContact.cpp
-  ${xygine_DIR}/physics/PhysicsDebugDrawer.cpp
-  ${xygine_DIR}/physics/PhysicsJointDistance.cpp
-  ${xygine_DIR}/physics/PhysicsJointFriction.cpp
-  ${xygine_DIR}/physics/PhysicsJointHinge.cpp
-  ${xygine_DIR}/physics/PhysicsJointMotor.cpp
-  ${xygine_DIR}/physics/PhysicsJointRope.cpp
-  ${xygine_DIR}/physics/PhysicsJointSlider.cpp
-  ${xygine_DIR}/physics/PhysicsJointWeld.cpp
-  ${xygine_DIR}/physics/PhysicsJointWheel.cpp
-  ${xygine_DIR}/physics/PhysicsRigidBody.cpp
-  ${xygine_DIR}/physics/PhysicsWorld.cpp
-  ${xygine_DIR}/spriter/SpriterDocument.cpp
-  ${xygine_DIR}/spriter/SpriterDocumentAttribute.cpp
-  ${xygine_DIR}/spriter/SpriterDocumentElement.cpp
-  ${xygine_DIR}/spriter/SpriterHelpers.cpp
-  ${xygine_DIR}/spriter/SpriterModel.cpp
-  ${xygine_DIR}/ui/UIButton.cpp
-  ${xygine_DIR}/ui/UICheckBox.cpp
-  ${xygine_DIR}/ui/UIComboBox.cpp
-  ${xygine_DIR}/ui/UIContainer.cpp
-  ${xygine_DIR}/ui/UIControl.cpp
-  ${xygine_DIR}/ui/UILabel.cpp
-  ${xygine_DIR}/ui/UIScoreList.cpp
-  ${xygine_DIR}/ui/UISelection.cpp
-  ${xygine_DIR}/ui/UISlider.cpp
-  ${xygine_DIR}/ui/UITextBox.cpp
-  ${xygine_DIR}/ui/UIWindow.cpp)
+set(XY_SRC
+  ${XY_DIR}/App.cpp
+  ${XY_DIR}/AudioManager.cpp
+  ${XY_DIR}/CommandQueue.cpp 
+  ${XY_DIR}/Entity.cpp
+  ${XY_DIR}/FileSystem.cpp
+  ${XY_DIR}/FontResource.cpp
+  ${XY_DIR}/MessageBus.cpp
+  ${XY_DIR}/Music.cpp
+  ${XY_DIR}/ParticleAffectors.cpp
+  ${XY_DIR}/PolyBatch.cpp
+  ${XY_DIR}/PostBloom.cpp
+  ${XY_DIR}/PostChromeAb.cpp
+  ${XY_DIR}/PostProcess.cpp
+  ${XY_DIR}/QuadTree.cpp
+  ${XY_DIR}/QuadTreeNode.cpp
+  ${XY_DIR}/Reports.cpp
+  ${XY_DIR}/Scene.cpp
+  ${XY_DIR}/Score.cpp
+  ${XY_DIR}/Server.cpp
+  ${XY_DIR}/ShaderResource.cpp
+  ${XY_DIR}/SoundPlayer.cpp
+  ${XY_DIR}/State.cpp
+  ${XY_DIR}/StateStack.cpp
+  ${XY_DIR}/components/Component.cpp
+  ${XY_DIR}/components/ComponentAnimatedDrawable.cpp
+  ${XY_DIR}/components/ComponentAnimationController.cpp 
+  ${XY_DIR}/components/ComponentAudioListener.cpp
+  ${XY_DIR}/components/ComponentAudioSource.cpp
+  ${XY_DIR}/components/ComponentCamera.cpp
+  ${XY_DIR}/components/ComponentParticleController.cpp
+  ${XY_DIR}/components/ComponentParticleSystem.cpp  
+  ${XY_DIR}/components/ComponentPointLight.cpp  
+  ${XY_DIR}/components/QuadTreeComponent.cpp  
+  ${XY_DIR}/parsers/pugixml.cpp  
+  ${XY_DIR}/physics/PhysicsAffectorAreaForce.cpp
+  ${XY_DIR}/physics/PhysicsAffectorConstantForce.cpp
+  ${XY_DIR}/physics/PhysicsAffectorPointForce.cpp
+  ${XY_DIR}/physics/PhysicsCollisionShape.cpp
+  ${XY_DIR}/physics/PhysicsCollisionCircleShape.cpp
+  ${XY_DIR}/physics/PhysicsCollisionEdgeShape.cpp
+  ${XY_DIR}/physics/PhysicsCollisionPolygonShape.cpp
+  ${XY_DIR}/physics/PhysicsCollisionRectangleShape.cpp
+  ${XY_DIR}/physics/PhysicsContact.cpp
+  ${XY_DIR}/physics/PhysicsDebugDrawer.cpp
+  ${XY_DIR}/physics/PhysicsJointDistance.cpp
+  ${XY_DIR}/physics/PhysicsJointFriction.cpp
+  ${XY_DIR}/physics/PhysicsJointHinge.cpp
+  ${XY_DIR}/physics/PhysicsJointMotor.cpp
+  ${XY_DIR}/physics/PhysicsJointRope.cpp
+  ${XY_DIR}/physics/PhysicsJointSlider.cpp
+  ${XY_DIR}/physics/PhysicsJointWeld.cpp
+  ${XY_DIR}/physics/PhysicsJointWheel.cpp
+  ${XY_DIR}/physics/PhysicsRigidBody.cpp
+  ${XY_DIR}/physics/PhysicsWorld.cpp
+  ${XY_DIR}/spriter/SpriterDocument.cpp
+  ${XY_DIR}/spriter/SpriterDocumentAttribute.cpp
+  ${XY_DIR}/spriter/SpriterDocumentElement.cpp
+  ${XY_DIR}/spriter/SpriterHelpers.cpp
+  ${XY_DIR}/spriter/SpriterModel.cpp
+  ${XY_DIR}/ui/UIButton.cpp
+  ${XY_DIR}/ui/UICheckBox.cpp
+  ${XY_DIR}/ui/UIComboBox.cpp
+  ${XY_DIR}/ui/UIContainer.cpp
+  ${XY_DIR}/ui/UIControl.cpp
+  ${XY_DIR}/ui/UILabel.cpp
+  ${XY_DIR}/ui/UIScoreList.cpp
+  ${XY_DIR}/ui/UISelection.cpp
+  ${XY_DIR}/ui/UISlider.cpp
+  ${XY_DIR}/ui/UITextBox.cpp
+  ${XY_DIR}/ui/UIWindow.cpp)
