add network example to example project add ui factory function

--- a/Example/CMakeLists.txt
+++ b/Example/CMakeLists.txt
@@ -57,6 +57,8 @@ SET(EXAMPLE_SRC
   src/main.cpp
   src/MenuMainState.cpp
   src/MenuOptionState.cpp
+  src/NetworkDemoServer.cpp
+  src/NetworkDemoState.cpp
   src/ParticleDemoState.cpp
   src/PhysicsDemoInputController.cpp
   src/PhysicsDemoLine.cpp
