--- a/Example/CMakeLists.txt
+++ b/Example/CMakeLists.txt
@@ -57,6 +57,7 @@ SET(EXAMPLE_SRC
   src/main.cpp
   src/MenuMainState.cpp
   src/MenuOptionState.cpp
+  src/NetworkDemoController.cpp
   src/NetworkDemoServer.cpp
   src/NetworkDemoState.cpp
   src/ParticleDemoState.cpp
