--- a/Example/Example.vcxproj
+++ b/Example/Example.vcxproj
@@ -77,6 +77,7 @@
     <ClInclude Include="include\MenuMainState.hpp" />
     <ClInclude Include="include\MenuOptionState.hpp" />
     <ClInclude Include="include\NetworkDemoBallLogic.hpp" />
+    <ClInclude Include="include\NetworkDemoController.hpp" />
     <ClInclude Include="include\NetworkDemoPacketIDs.hpp" />
     <ClInclude Include="include\NetworkDemoServer.hpp" />
     <ClInclude Include="include\NetworkDemoState.hpp" />
@@ -97,6 +98,7 @@
     <ClCompile Include="src\MenuMainState.cpp" />
     <ClCompile Include="src\MenuOptionState.cpp" />
     <ClCompile Include="src\NetworkDemoBallLogic.cpp" />
+    <ClCompile Include="src\NetworkDemoController.cpp" />
     <ClCompile Include="src\NetworkDemoServer.cpp" />
     <ClCompile Include="src\NetworkDemoState.cpp" />
     <ClCompile Include="src\ParticleDemoState.cpp" />
