--- a/Example/Example.vcxproj.filters
+++ b/Example/Example.vcxproj.filters
@@ -84,6 +84,12 @@
     <ClInclude Include="include\NetworkDemoController.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\NetworkDemoPlayerInput.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\NetworkDemoPlayerController.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
@@ -132,6 +138,9 @@
       <Filter>Source Files\network demo</Filter>
     </ClCompile>
     <ClCompile Include="src\NetworkDemoController.cpp">
+      <Filter>Source Files\network demo</Filter>
+    </ClCompile>
+    <ClCompile Include="src\NetworkDemoPlayerController.cpp">
       <Filter>Source Files\network demo</Filter>
     </ClCompile>
   </ItemGroup>
