--- a/Example/CMakeLists.txt
+++ b/Example/CMakeLists.txt
@@ -58,6 +58,7 @@ SET(EXAMPLE_SRC
   src/MenuMainState.cpp
   src/MenuOptionState.cpp
   src/NetworkDemoBallLogic.cpp
+  src/NetworkDemoCollisions.cpp
   src/NetworkDemoController.cpp
   src/NetworkDemoPlayerController.cpp
   src/NetworkDemoServer.cpp
